feat(api): add password auth services, remove base repository
